--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,7 @@ find_package(SDL2 REQUIRED)
 find_package(GLEW REQUIRED)
 find_package(OpenGL REQUIRED)
 
-target_link_libraries(openvrvisualizer PRIVATE openhmd m ${SDL2_LIBRARY} SDL2 ${GLEW_LIBRARIES} ${OPENGL_LIBRARIES})
+target_link_libraries(openvrvisualizer PRIVATE openvr_api openhmd m ${SDL2_LIBRARY} SDL2 ${GLEW_LIBRARIES} ${OPENGL_LIBRARIES})
 include_directories(/usr/include/SDL2/)
 
 install(TARGETS openvrvisualizer RUNTIME DESTINATION bin)
